<resources>
    <string name="app_name">BookListingApp</string>

    <!-- Text to display in the list when there are no books [CHAR LIMIT=NONE] -->
    <string name="no_books">No books found. \nPlease repeat the query\nwith another keyword.</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <string name="searchFieldHint">Search book...</string>

    <string name="book_sample_title">Title</string>

    <string name="book_sample_author_title">Author</string>

    <string name="book_sample_publisher_title">Publisher</string>

    <string name="book_sample_published_date">Published Date</string>

    <string name="book_sample_pages">Pages</string>
</resources>
