<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout style="@style/MainLinearLayout">

        <ImageView
            android:id="@+id/image"
            style="@style/BookImage"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:id="@+id/text_container"
            style="@style/BookInfoLinearLayout">

            <TextView
                android:id="@+id/title"
                style="@style/BookTitle"
                tools:text="@string/book_sample_title" />

            <TextView
                android:id="@+id/author"
                style="@style/BookAuthor"
                tools:text="@string/book_sample_author_title" />

            <TextView
                android:id="@+id/publisher"
                style="@style/BookPublisherDatePages"
                tools:text="@string/book_sample_publisher_title" />

            <TextView
                android:id="@+id/published_date"
                style="@style/BookPublisherDatePages"
                tools:text="@string/book_sample_published_date" />

            <TextView
                android:id="@+id/page_count"
                style="@style/BookPublisherDatePages"
                tools:text="@string/book_sample_pages" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>